--- a/about.html
+++ b/about.html
@@ -1,65 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
   <title>Doughnut Stop Believin</title>
-
-  
-<link rel="icon" href="favicon.png" type="image/png">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-
-  
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet" />
 
-  <script>
-    function handleOrderClick() {
-      window.location.href = 'order.html';
-    }
-  </script>
 </head>
 
+
 <body>
+  
   <nav class="navbar">
     <div class="nav-left">
       <li><a href="about.html">ABOUT PAGE</a></li>
       <li><a href="customer-info.html">CUSTOMER INFO</a></li>
       <li><a href="contact.html">CONTACT</a></li>
     </div>
-
+  
     <div class="nav-center">
       <li class="brand"><a href="index.html">Doughnut Stop Believin</a></li> 
     </div>
-
+  
     <div class="nav-right">
       <li><a href="review.html">REVIEW PAGE</a></li>
       <li><a href="delivery.html">DELIVERY</a></li>
       <li><a href="pickup.html">PICK UP</a></li>
     </div>
   </nav>
+  
 
-  <h1 class="heading">Doughnut Stop Believin</h1>
-
-  <p class="description">
-    Welcome to our shop! We have a variety of sweet and delicious donuts.<br />
-    You can choose different flavors from the menu or at the cashier.
-  </p>
-
-  <img src="favicon.png" alt="Donut Logo" class="hero-img" />
-
-  <div class="button-group">
-    <button class="btn-now" onclick="handleOrderClick()">Order Now</button>
-  </div>
+  <h1 class="heading">About Us</h1>
+  <section class="reviews">
+    <div class="review-box">
+      <p><strong>We are Doughnut Stop Believin, offering the best, <br />
+        most delicious donuts made fresh every day. From classic flavors to unique combinations, we have something for everyone!</p>
 
   <footer>
     <p>&copy; 2025 Doughnut Stop Believin. All rights reserved.</p>
   </footer>
 </body>
 </html>
-123
