--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>Doughnut Stop Believin</title>
-
-  
-<link rel="icon" href="favicon.png" type="image/png">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet" />
 
-  <script>
-    function handleOrderClick() {
-      window.location.href = 'order.html';
-    }
-  </script>
 </head>
 
+
 <body>
+
   <nav class="navbar">
     <div class="nav-left">
       <li><a href="about.html">ABOUT PAGE</a></li>
@@ -34,7 +21,7 @@
     </div>
 
     <div class="nav-center">
-      <li class="brand"><a href="index.html">Doughnut Stop Believin</a></li> 
+      <li class="brand"><a href="index.html">Doughnut Stop Believin</a></li>
     </div>
 
     <div class="nav-right">
@@ -44,22 +31,18 @@
     </div>
   </nav>
 
-  <h1 class="heading">Doughnut Stop Believin</h1>
+  <h1 class="heading">Contact Us</h1>
+  <section class="reviews">
+    <div class="review-box">
+      <p><strong></p>
 
-  <p class="description">
-    Welcome to our shop! We have a variety of sweet and delicious donuts.<br />
-    You can choose different flavors from the menu or at the cashier.
-  </p>
-
-  <img src="favicon.png" alt="Donut Logo" class="hero-img" />
-
-  <div class="button-group">
-    <button class="btn-now" onclick="handleOrderClick()">Order Now</button>
-  </div>
+  <p class="description">Feel free to reach out to us with any questions or comments! </p>
+  <p class="description">Facebook Page: Doughnut Stop Believin</p>
+  <p class="description">Email: DoughnutStopBelievin@gmail.com</p>
+  <p class="description">Telephone Number: </p>
 
   <footer>
     <p>&copy; 2025 Doughnut Stop Believin. All rights reserved.</p>
   </footer>
 </body>
 </html>
-123
